--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -20,15 +20,16 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nighthawk" translatesAutoresizingMaskIntoConstraints="NO" id="qVQ-NB-HZN">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </imageView>
-                            <searchBar contentMode="redraw" fixedFrame="YES" searchBarStyle="minimal" placeholder="Enter River" translatesAutoresizingMaskIntoConstraints="NO" id="E1F-hm-pHF">
-                                <rect key="frame" x="0.0" y="26" width="375" height="56"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Enter River" translatesAutoresizingMaskIntoConstraints="NO" id="E1F-hm-pHF">
+                                <rect key="frame" x="0.0" y="20" width="375" height="62"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d7w-4f-Ub9">
-                                <rect key="frame" x="0.0" y="82" width="375" height="212"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d7w-4f-Ub9">
+                                <rect key="frame" x="0.0" y="82" width="375" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="536" id="RCg-hv-qpj"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="RiverCell" id="iYF-fD-Qfd">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -44,9 +45,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="d7w-4f-Ub9" firstAttribute="trailing" secondItem="E1F-hm-pHF" secondAttribute="trailing" id="DVR-4D-OGH"/>
+                            <constraint firstItem="d7w-4f-Ub9" firstAttribute="top" secondItem="E1F-hm-pHF" secondAttribute="bottom" id="H0n-Aq-qCJ"/>
+                            <constraint firstItem="d7w-4f-Ub9" firstAttribute="leading" secondItem="E1F-hm-pHF" secondAttribute="leading" id="Jxh-sb-iaR"/>
                             <constraint firstItem="qVQ-NB-HZN" firstAttribute="trailing" secondItem="I0f-xi-GA5" secondAttribute="trailing" id="Mga-FT-sa0"/>
+                            <constraint firstItem="E1F-hm-pHF" firstAttribute="leading" secondItem="I0f-xi-GA5" secondAttribute="leading" id="Q6V-FM-Ia9"/>
+                            <constraint firstItem="d7w-4f-Ub9" firstAttribute="bottom" secondItem="I0f-xi-GA5" secondAttribute="bottom" id="Q8B-4s-uKw"/>
+                            <constraint firstItem="E1F-hm-pHF" firstAttribute="trailing" secondItem="I0f-xi-GA5" secondAttribute="trailing" id="Qe4-6Z-wnn"/>
+                            <constraint firstItem="d7w-4f-Ub9" firstAttribute="leading" secondItem="I0f-xi-GA5" secondAttribute="leading" id="SGy-bb-NG8"/>
+                            <constraint firstItem="E1F-hm-pHF" firstAttribute="top" secondItem="I0f-xi-GA5" secondAttribute="top" id="UfK-ye-Sot"/>
                             <constraint firstItem="qVQ-NB-HZN" firstAttribute="leading" secondItem="I0f-xi-GA5" secondAttribute="leading" id="ls3-zq-qSg"/>
                             <constraint firstItem="qVQ-NB-HZN" firstAttribute="bottom" secondItem="I0f-xi-GA5" secondAttribute="bottom" id="nDg-so-NEr"/>
+                            <constraint firstItem="d7w-4f-Ub9" firstAttribute="trailing" secondItem="I0f-xi-GA5" secondAttribute="trailing" id="tSi-B5-Ltw"/>
                             <constraint firstItem="qVQ-NB-HZN" firstAttribute="top" secondItem="f4L-kx-qJc" secondAttribute="top" id="w4G-1J-ysX"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="I0f-xi-GA5"/>
@@ -59,7 +69,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wa7-zs-YBS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1194" y="180"/>
+            <point key="canvasLocation" x="1192.8" y="179.46026986506749"/>
         </scene>
         <!--Info View Controller-->
         <scene sceneID="xBC-xd-vO5">
@@ -144,6 +154,13 @@
                                 <rect key="frame" x="16" y="126" width="343" height="414"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Picture Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8FG-4R-GnK">
+                                <rect key="frame" x="16" y="548" width="343" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -163,6 +180,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="gallaryImageView" destination="H55-Vt-kXR" id="h0u-rg-kbr"/>
+                        <outlet property="pictureNameLabel" destination="8FG-4R-GnK" id="HnC-0z-2Xc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UPs-2U-79g" userLabel="First Responder" sceneMemberID="firstResponder"/>
