--- a/View/Base.lproj/Main.storyboard
+++ b/View/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Rivers-->
+        <!--RiverViewController-->
         <scene sceneID="MRZ-eA-Qy6">
             <objects>
-                <viewController id="ULU-GA-Ris" customClass="RiverViewController" customModule="RiverLaunch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RiverViewController" title="RiverViewController" id="ULU-GA-Ris" customClass="RiverViewController" customModule="RiverLaunch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="f4L-kx-qJc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -112,6 +112,9 @@
                                         <state key="normal" title="Reviews">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="signOutButton:" destination="6KI-kW-Gy9" eventType="touchUpInside" id="nGj-IX-gnm"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="012-Q7-Pm7">
                                         <rect key="frame" x="0.0" y="213" width="343" height="41"/>
@@ -156,7 +159,7 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Nighthawk" translatesAutoresizingMaskIntoConstraints="NO" id="HYj-TH-uZ3">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H55-Vt-kXR">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="H55-Vt-kXR">
                                 <rect key="frame" x="16" y="64" width="343" height="525"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Picture Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8FG-4R-GnK">
@@ -311,7 +314,7 @@
         <!--Home-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" userLabel="Home" customClass="HomeViewController" customModule="RiverLaunch" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" userLabel="Home" customClass="HomeViewController" customModule="RiverLaunch" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -465,7 +468,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="hIZ-8n-IdE">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="9AX-10-3A1" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="TabBarController" automaticallyAdjustsScrollViewInsets="NO" id="9AX-10-3A1" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qQF-N1-ttZ">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
@@ -556,7 +559,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="2901" y="360"/>
+            <point key="canvasLocation" x="2735" y="359"/>
         </scene>
         <!--Map Search Results View Controller-->
         <scene sceneID="rNK-T0-ZEn">
